ongoing: third edit

--- a/1gallery.html
+++ b/1gallery.html
@@ -18,11 +18,12 @@
                 <ul class="nav">
                     <li class="nav-item"><a class="nav-link" href="1ahomepage.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="1gallery.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="1portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contacts</a></li>
                 </ul> 
         </nav>
+    </div>
     </div>
 
     <div class="jumbotron">
