--- a/1ahomepage.html
+++ b/1ahomepage.html
@@ -19,7 +19,7 @@
                     <li class="nav-item"><a class="nav-link" href="1ahomepage.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="1gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="1portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contacts</a></li>
                 </ul> 
         </nav>
