--- a/1about.html
+++ b/1about.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MY WEBSITE</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="1ahomepage.css">
+    <link rel="stylesheet" href="1about.css">
     <link rel="stylesheet" href="navstyle.css">
 </head>
 <body>
@@ -40,56 +39,22 @@
             </nav>
     </div>
 
-
-        <div class="jumbotron bg-transparent">
-            <div class = jcontainer >
-                <h2 class = "h2 display-4 font-weight-bold text-justify">THE EARTH'S MIGHTIEST HEROES</h2>
-                <div class = container-fluid>
-                    <div class="row">
-                        <div class="col-md-9 d-flex justify-content-between">
-                            <div class = "lead text-justify">
-                                <p id="avgdescription">
-                                    Avengers stand as the planet's first line of defense against the most powerful threats in the universe.
-                                    A team of extraordinary individuals, with either superpowers or other special characteristics.
-                                </p>
-                                <p id="explore" class="h5">
-                                    Wanna know more about the Orginal Six Avengers? Explore this website.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+    <div class="jumbotron bg-transparent">
+        <div class = jcontainer >
+            <h2 class = "h2 display-4 font-weight-bold text-center">ABOUT THE AVENGERS</h2>
+            <div class = container-fluid>
+                <div class = "lead text-justify">
+                    <p id="avgdescription">
+                        The Avengers are a team of superheroes assembled by Nick Fury and the intelligence agency S.H.I.E.L.D. through the Avengers Initiative.
+                        The original six avengers were Captain America, Iron Man, Thor, Hulk, Black Widow and Hawkeye.They were initially brought together by S.H.I.E.L.D. to combat Loki,
+                        Thor's adoptive brother. The team was initially formed by Nick Fury to "fight the battle that S.H.I.E.L.D. never could".<br>
+                        In this website you will learn more about the Avengers individual profile, view photos of them from Avengers 1 to Avengers 4.
+                        
+                    </p>
                 </div>
             </div>
         </div>
-</div>
-
-<div class="footer">     
-    <div class="container-fuid">
-        <h3 id="creator">THE CREATOR<h3>
-        <div class="row">
-            <div class="col-2 col-md-2">
-                <img class="circular-img" src="creator.jpg" width="250px" height="250px" alt="The Creator">
-            </div>
-            <div class="col-6 col-md-10">
-                <h4 id="me">MIJE, KASSANDRA</h4>
-                <p id="aboutme">
-                    Cassey is 20 yrs old, a student of Information Technology from USTP. <br>
-                    She is a huge fan of Marvel, she likes watching the marvel TV shows and movies.<br>
-                    She likes spending her spare time watching kpop videos.<br>
-                </p>
-                <p id="follow">Follow cassey's social media accounts
-                    <a href="https://www.facebook.com/mije.cassey" class="fa fa-facebook"></a>
-                    <a href="https://twitter.com/danversvndyne" class="fa fa-twitter"></a>
-                    <a href="https://www.instagram.com/casseeeeeey/?hl=en" class="fa fa-instagram"></a>
-                </p>
-            </div>
-        </div>  
     </div>
-</div>
-
-</div>
-
-    
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
