--- a/1portfolio.html
+++ b/1portfolio.html
@@ -7,23 +7,40 @@
     <title>Individual Photos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="1portfolio.css">
+    <link rel="stylesheet" href="navstyle.css">
+
 
 </head>
 <body>
-    <div id = "wrapper">
-        <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="#">
-                <img src="logo.png" width = "65" height = "55" class="d-inline-block align-top" alt="Logo"> The Avengers
-            </a>
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="1ahomepage.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="1gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="1portfolio.html">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contacts</a></li>
-                </ul> 
-        </nav>
-    </div>
+
+    <div id="background" >
+        <div class="wrapper">
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">THE AVENGERS</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="1ahomepage.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="1about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="1gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="1portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
+              </nav>
+        </div>
 
     <div class="background">
         <div class="container-fluid">
