ongoing: latest update

--- a/1gallery.html
+++ b/1gallery.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gallery</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Archivo+Black|Bai+Jamjuree|Bellota+Text|Bowlby+One+SC|Coda+Caption:800|Krub|M+PLUS+Rounded+1c|Oswald|Passion+One|Rubik+Mono+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="1gallery.css">
     <link rel="stylesheet" href="navstyle.css">
 
@@ -42,73 +43,73 @@
         </div>
 
     <div class="jumbotron">
-    <div class="container-fuid">
-        <h2 class="font-weight-bold text-center">PHOTO ALBUM</h3>
-        <div class="row">
-            <div class="col-md-4 ml-auto">
-                <div class="picture">
-                    <a href="1galleryPhoto1.html">
-                        <img src="individual.jpg" width = "400" height = "250" alt="individual photos">    
-                        <div class="text">
-                            <h3>INDIVIDUAL PHOTOS</h3>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 ml-auto">
-                <div class="picture"> 
-                    <a href="1galleryPhoto2.html">
-                        <img src="group.jpg" width = "400" height = "250" alt="group photos">
-                        <div class="text">
-                            <h3>GROUP PHOTOS</h3>
-                        </div>
-                    </a>
-                </div> 
-            </div>
-            <div class="col-md-4 ml-auto">
-                <div class="picture">
-                    <a href="1galleryPhoto3.html">
-                        <img src="random.png" width = "400" height = "250" alt="random photos">
-                        <div class="text">
-                            <h3>RANDOM PHOTOS FROM ALL MOVIES</h3>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>    
+        <div class="container-fuid">
+            <h2 id="photoalbum" class="font-weight-bold text-center">PHOTO ALBUM</h3>
             <div class="row">
                 <div class="col-md-4 ml-auto">
                     <div class="picture">
-                        <a href="1galleryPhoto4.html">
-                            <img src="avengers1.jpg" width = "400" height = "250" alt="Avengers photos">
+                        <a href="1galleryPhoto1.html">
+                            <img src="individual.jpg" width = "400" height = "250" alt="individual photos">    
                             <div class="text">
-                                <h3>AVENGERS PHOTOS</h3>
+                                <h3>INDIVIDUAL PHOTOS</h3>
                             </div>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4 ml-auto">
                     <div class="picture"> 
-                        <a href="1galleryPhoto5.html">
-                            <img src="ultron.jpg" width = "400" height = "250" alt="Ultron photos">
+                        <a href="1galleryPhoto2.html">
+                            <img src="assemble1.jpg" width = "400" height = "250" alt="group photos">
                             <div class="text">
-                                <h3>AGE OF ULTRON PHOTOS</h3>
+                                <h3>GROUP PHOTOS</h3>
                             </div>
                         </a>
                     </div> 
                 </div>
                 <div class="col-md-4 ml-auto">
                     <div class="picture">
-                        <a href="1galleryPhoto6.html">
-                            <img src="endgame.jpg" width = "400" height = "250" alt="Infinity War and Endgame Photos">
+                        <a href="1galleryPhoto3.html">
+                            <img src="random.png" width = "400" height = "250" alt="random photos">
                             <div class="text">
-                                <h3>INFINITY WAR/ENDGAME PHOTOS</h3>
+                                <h3>RANDOM PHOTOS FROM ALL MOVIES</h3>
                             </div>
                         </a>
                     </div>
                 </div>
-            </div>        
-    </div>
+            </div>    
+                <div class="row">
+                    <div class="col-md-4 ml-auto">
+                        <div class="picture">
+                            <a href="1galleryPhoto4.html">
+                                <img src="avengers1.jpg" width = "400" height = "250" alt="Avengers photos">
+                                <div class="text">
+                                    <h3>AVENGERS PHOTOS</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 ml-auto">
+                        <div class="picture"> 
+                            <a href="1galleryPhoto5.html">
+                                <img src="group.jpg" width = "400" height = "250" alt="Ultron photos">
+                                <div class="text">
+                                    <h3>AGE OF ULTRON PHOTOS</h3>
+                                </div>
+                            </a>
+                        </div> 
+                    </div>
+                    <div class="col-md-4 ml-auto">
+                        <div class="picture">
+                            <a href="1galleryPhoto6.html">
+                                <img src="endgame.jpg" width = "400" height = "250" alt="Infinity War and Endgame Photos">
+                                <div class="text">
+                                    <h3>INFINITY WAR/ENDGAME PHOTOS</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>        
+        </div>
     </div>
     
 
