--- a/1galleryPhoto5.html
+++ b/1galleryPhoto5.html
@@ -6,29 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Age of Ultron Photos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Archivo+Black|Bai+Jamjuree|Bellota+Text|Bowlby+One+SC|Coda+Caption:800|Krub|M+PLUS+Rounded+1c|Oswald|Passion+One|Rubik+Mono+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="1galleryphotos.css">
-
+    <link rel="stylesheet" href="navstyle.css">
 
 </head>
 <body>
-    <div id = "wrapper">
-        <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="#">
-                <img src="logo.png" width = "65" height = "55" class="d-inline-block align-top" alt="Logo"> The Avengers
-            </a>
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="1ahomepage.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="1gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contacts</a></li>
-                </ul> 
-        </nav>
-    </div>
+    <div id="background" >
+        <div class="wrapper">
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">THE AVENGERS</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="1ahomepage.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="1about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="1gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="1portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
+              </nav>
+        </div>
 
     <div class="background">
         <div class="container-fluid">
-
+            <h4 class="title">AVENGERS AGE OF ULTRON</h4>
             <div class="row">
                 <div class="box">
                     <div class="col-md-3">
@@ -82,7 +97,8 @@
                             </div>
                         </div>
                     </div>
-                </div>    
+                </div>
+            <a href="1gallery.html" class="btn" role="button">Back</a> 
         </div>
 
     </div>        
