--- a/1gallery.html
+++ b/1gallery.html
@@ -13,97 +13,106 @@
 
 </head>
 <body>
-    <div id="background" >
-        <div class="wrapper">
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">THE AVENGERS</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="1ahomepage.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="1about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="1gallery.html">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="1portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacts</a>
-                        </li>
-                    </ul>
-                </div>
-              </nav>
-        </div>
+
+    <div class="wrapper">
+        <nav class="navbar navbar-expand-md">
+            <a href="1ahomepage.html" class="navbar-brand"><img src="logo.png" width="130px" height="50px"/></a>
+            <button type="button" class="navbar-toggler ml-auto custom-toggler navbar-dark" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="navbarCollapse" class="collapse navbar-collapse text-right navbarCollapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="1ahomepage.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="1about.html" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item dropdown flex-grow-1 text-right">
+                        <a href="1gallery.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Gallery</a>
+                        <div class="dropdown-menu">
+                            <a href="1gallery.html" class="dropdown-item">Main Gallery</a>
+                            <a href="1galleryPhoto1.html" class="dropdown-item">Individual Photos</a>
+                            <a href="1galleryPhoto2.html" class="dropdown-item">Group Photos</a>
+                            <a href="1galleryPhoto3.html" class="dropdown-item">Random Shots</a>
+                            <a href="1galleryPhoto4.html" class="dropdown-item">Avengers(2012) Photos</a>
+                            <a href="1galleryPhoto5.html" class="dropdown-item">Age of Ultron Photos</a>
+                            <a href="1galleryPhoto6.html" class="dropdown-item">IW/Endgame Photos</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a href="1portfolio.html" class="nav-link">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="1contacts.html" class="nav-link">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
     <div class="jumbotron">
         <div class="container-fuid">
             <h2 id="photoalbum" class="font-weight-bold text-center">PHOTO ALBUM</h3>
             <div class="row">
-                <div class="col-md-4 ml-auto">
+                <div class="col-md-4">
                     <div class="picture">
                         <a href="1galleryPhoto1.html">
-                            <img src="individual.jpg" width = "400" height = "250" alt="individual photos">    
+                            <img src="individual.jpg" class="picture" width = "400" height = "250" alt="individual photos">    
                             <div class="text">
                                 <h3>INDIVIDUAL PHOTOS</h3>
                             </div>
                         </a>
                     </div>
                 </div>
-                <div class="col-md-4 ml-auto">
+                <div class="col-md-4">
                     <div class="picture"> 
                         <a href="1galleryPhoto2.html">
-                            <img src="assemble1.jpg" width = "400" height = "250" alt="group photos">
+                            <img src="assemble1.jpg" class="picture" width = "420" height = "250" alt="group photos">
                             <div class="text">
                                 <h3>GROUP PHOTOS</h3>
                             </div>
                         </a>
                     </div> 
                 </div>
-                <div class="col-md-4 ml-auto">
+                <div class="col-md-4">
                     <div class="picture">
                         <a href="1galleryPhoto3.html">
-                            <img src="random.png" width = "400" height = "250" alt="random photos">
+                            <img src="random.png" class="picture" width = "400" height = "250" alt="random photos">
                             <div class="text">
-                                <h3>RANDOM PHOTOS FROM ALL MOVIES</h3>
+                                <h3>RANDOM SHOTS</h3>
                             </div>
                         </a>
                     </div>
                 </div>
             </div>    
                 <div class="row">
-                    <div class="col-md-4 ml-auto">
+                    <div class="col-md-4">
                         <div class="picture">
                             <a href="1galleryPhoto4.html">
-                                <img src="avengers1.jpg" width = "400" height = "250" alt="Avengers photos">
+                                <img src="avengers1.jpg" class="picture" width = "400" height = "250" alt="Avengers photos">
                                 <div class="text">
-                                    <h3>AVENGERS PHOTOS</h3>
+                                    <h3>AVENGERS PHOTOS</h3class="text">
                                 </div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4 ml-auto">
+                    <div class="col-md-4">
                         <div class="picture"> 
                             <a href="1galleryPhoto5.html">
-                                <img src="group.jpg" width = "400" height = "250" alt="Ultron photos">
+                                <img src="group.jpg" class="picture" width = "400" height = "250" alt="Ultron photos">
                                 <div class="text">
                                     <h3>AGE OF ULTRON PHOTOS</h3>
                                 </div>
                             </a>
                         </div> 
                     </div>
-                    <div class="col-md-4 ml-auto">
+                    <div class="col-md-4">
                         <div class="picture">
                             <a href="1galleryPhoto6.html">
-                                <img src="endgame.jpg" width = "400" height = "250" alt="Infinity War and Endgame Photos">
+                                <img src="endgame.jpg" class="picture" width = "400" height = "250" alt="Infinity War and Endgame Photos">
                                 <div class="text">
-                                    <h3>INFINITY WAR/ENDGAME PHOTOS</h3>
+                                    <h3>IW/ENDGAME PHOTOS</h3>
                                 </div>
                             </a>
                         </div>
